fix-spell fix and service section gap

--- a/src/style/components/ContactBanner.scss
+++ b/src/style/components/ContactBanner.scss
@@ -9,7 +9,7 @@
         text-align: center;
 
         &:hover {
-            border-color: var(--hoverAcent);
+            border-color: var(--hoverAccent);
         }
 
         .para {
