--- a/src/style/components/HeroSection.scss
+++ b/src/style/components/HeroSection.scss
@@ -38,7 +38,7 @@
   }
 
   .hero__name .word:hover {
-    color: var(--hoverAcent);
+    color: var(--hoverAccent);
   }
 
   .hero__name .onespace {
