--- a/src/style/components/ServicesSection.scss
+++ b/src/style/components/ServicesSection.scss
@@ -2,10 +2,12 @@
   padding: 10rem 0;
   .services__allItems {
     display: flex;
-    gap: 10rem;
+    gap: 5rem;
     justify-content: space-between;
     margin-top: 5rem;
   }
+
+  // Small screen device
   @media only screen and (max-width: 768px) {
     .services__allItems {
       flex-direction: column;
